--- a/package.json
+++ b/package.json
@@ -5,12 +5,12 @@
   },
   "dependencies": {
     "vue": "^3.3.7",
-    "vue-router": "^4.2.5"
+    "vue-router": "^4.2.5",
+    "postcss": "8.4.28",
+    "sass": "1.66.0"
   },
   "devDependencies": {
-    "@vitejs/plugin-vue": "^4.4.0",
-    "@vitejs/plugin-vue-jsx": "latest",
     "express": "^4.18.2",
-    "vite": "latest"
+    "vite": "4.4.11"
   }
 }
