--- a/package.json
+++ b/package.json
@@ -4,13 +4,16 @@
     "dev": "nodemon ./server.mjs"
   },
   "dependencies": {
-    "vue": "^3.3.7",
-    "vue-router": "^4.2.5",
+    "@vitejs/plugin-vue": "^4.4.1",
+    "axios": "^1.6.1",
+    "pinia": "^2.1.7",
     "postcss": "8.4.28",
-    "sass": "1.66.0"
+    "sass": "1.66.0",
+    "vue": "^3.3.7",
+    "vue-router": "^4.2.5"
   },
   "devDependencies": {
     "express": "^4.18.2",
-    "vite": "4.4.11"
+    "vite": "4.5.0"
   }
 }
