--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,9 @@
     "jsx": "preserve",
     "resolveJsonModule": true,
     "esModuleInterop": true,
+    "paths": {
+      "@src/*": ["./src/*"]
+    },
     "lib": [
       "esnext",
       "dom"
