--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "private": true,
   "scripts": {
-    "dev": "nodemon ./server.mjs"
+    "dev": "nodemon ./server.mjs",
+    "type-check": "vue-tsc --noEmit"
   },
   "dependencies": {
     "@vitejs/plugin-vue": "^4.4.1",
@@ -10,10 +11,21 @@
     "postcss": "8.4.28",
     "sass": "1.66.0",
     "vue": "^3.3.7",
-    "vue-router": "^4.2.5"
+    "vue-router": "^4.2.5",
+    "ts-node": "10.9.1"
   },
   "devDependencies": {
+    "@types/node": "20.8.4",
     "express": "^4.18.2",
-    "vite": "4.5.0"
-  }
+    "@typescript-eslint/eslint-plugin": "6.7.4",
+    "@typescript-eslint/parser": "6.7.4",
+    "@vue/eslint-config-typescript": "^11.0.3",
+    "@vue/tsconfig": "0.4.0",
+    "eslint": "^8.47.0",
+    "typescript": "5.1.6",
+    "eslint-plugin-vue": "9.17.0",
+    "vite": "4.5.0",
+    "vue-tsc": "1.8.19"
+  },
+  "type": "module"
 }
