--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,25 +1,31 @@
 {
   "compilerOptions": {
-    "target": "esnext",
-    "useDefineForClassFields": true,
-    "module": "esnext",
+    "target": "ES2020",
+    "module": "ESNext",
     "moduleResolution": "node",
     "jsx": "preserve",
     "resolveJsonModule": true,
+    "isolatedModules": true,
+    "useDefineForClassFields": true,
     "esModuleInterop": true,
     "paths": {
       "@src/*": ["./src/*"]
     },
+    "allowJs": true,
     "lib": [
       "esnext",
       "dom"
     ],
     "types": [
-      "vite/client"
+      "vite/client",
+      "node"
     ]
   },
   "include": [
     "src",
+    "src/**/*.vue",
+    "src/**/*.ts",
+    "src/**/*.tsx",
     "server.mjs"
   ]
 }
